infra/apps/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - name: http
      port: 80
      targetPort: http
