infra/apps/demo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: demo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`demo.homelab.gvlad.dev`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: ingress
      services:
        - name: whoami
          port: 80
  tls:
    secretName: homelab-wildcard-staging-tls
